fixing line spacing resume

--- a/css/main.css
+++ b/css/main.css
@@ -133,4 +133,6 @@ h4.posts {
     margin-left: auto;
     margin-right: auto;
 }
-
+.resume {
+    line-height: .8;
+}
